// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropdownItem /> renders correctly 1`] = `
<DocumentFragment>
  <button
    class="chakra-menu__menuitem css-jtq5p1"
    data-index="0"
    data-testid="dropdown-item"
    id="menu-list-:r1:-menuitem-:r2:"
    role="menuitem"
    tabindex="-1"
    type="button"
  >
    <svg
      class="chakra-icon css-kpbtv0"
      data-testid="dropdown-item-icon"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 256 256"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M164.49,163.51a12,12,0,1,1-17,0A12,12,0,0,1,164.49,163.51Zm-81-8a12,12,0,1,0,17,0A12,12,0,0,0,83.51,155.51Zm9-39a12,12,0,1,0-17,0A12,12,0,0,0,92.49,116.49Zm48-1a12,12,0,1,0,0,17A12,12,0,0,0,140.49,115.51ZM232,128A104,104,0,1,1,128,24a8,8,0,0,1,8,8,40,40,0,0,0,40,40,8,8,0,0,1,8,8,40,40,0,0,0,40,40A8,8,0,0,1,232,128Zm-16.31,7.39A56.13,56.13,0,0,1,168.5,87.5a56.13,56.13,0,0,1-47.89-47.19,88,88,0,1,0,95.08,95.08Z"
      />
    </svg>
    <p
      class="css-1a1j0go"
    >
      Item
    </p>
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<DropdownItem /> renders correctly when hovered: Hovered 1`] = `
<DocumentFragment>
  <button
    class="chakra-menu__menuitem css-jtq5p1"
    data-index="0"
    data-testid="dropdown-item"
    id="menu-list-:r7:-menuitem-:r8:"
    role="menuitem"
    tabindex="0"
    type="button"
  >
    <svg
      class="chakra-icon css-kpbtv0"
      data-testid="dropdown-item-icon"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 256 256"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M164.49,163.51a12,12,0,1,1-17,0A12,12,0,0,1,164.49,163.51Zm-81-8a12,12,0,1,0,17,0A12,12,0,0,0,83.51,155.51Zm9-39a12,12,0,1,0-17,0A12,12,0,0,0,92.49,116.49Zm48-1a12,12,0,1,0,0,17A12,12,0,0,0,140.49,115.51ZM232,128A104,104,0,1,1,128,24a8,8,0,0,1,8,8,40,40,0,0,0,40,40,8,8,0,0,1,8,8,40,40,0,0,0,40,40A8,8,0,0,1,232,128Zm-16.31,7.39A56.13,56.13,0,0,1,168.5,87.5a56.13,56.13,0,0,1-47.89-47.19,88,88,0,1,0,95.08,95.08Z"
      />
    </svg>
    <p
      class="css-1a1j0go"
    >
      Item
    </p>
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<DropdownItem /> renders correctly when it's active: Active 1`] = `
<DocumentFragment>
  <button
    class="chakra-menu__menuitem css-mbp4z0"
    data-index="0"
    data-testid="dropdown-item"
    id="menu-list-:rd:-menuitem-:re:"
    role="menuitem"
    tabindex="-1"
    type="button"
  >
    <svg
      class="chakra-icon css-kpbtv0"
      data-testid="dropdown-item-icon"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 256 256"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M224,120a40,40,0,0,1-40-40,8,8,0,0,0-8-8,40,40,0,0,1-40-40,8,8,0,0,0-8-8A104,104,0,1,0,232,128,8,8,0,0,0,224,120ZM75.51,99.51a12,12,0,1,1,0,17A12,12,0,0,1,75.51,99.51Zm25,73a12,12,0,1,1,0-17A12,12,0,0,1,100.49,172.49Zm23-40a12,12,0,1,1,17,0A12,12,0,0,1,123.51,132.49Zm41,48a12,12,0,1,1,0-17A12,12,0,0,1,164.49,180.49Z"
      />
    </svg>
    <p
      class="css-1a1j0go"
    >
      Item
    </p>
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<DropdownItem /> renders correctly when it's disabled: Disabled 1`] = `
<DocumentFragment>
  <button
    class="chakra-menu__menuitem css-1j5s9kt"
    data-index="0"
    data-testid="dropdown-item"
    id="menu-list-:ra:-menuitem-:rb:"
    role="menuitem"
    tabindex="-1"
    type="button"
  >
    <svg
      class="chakra-icon css-kpbtv0"
      data-testid="dropdown-item-icon"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 256 256"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M164.49,163.51a12,12,0,1,1-17,0A12,12,0,0,1,164.49,163.51Zm-81-8a12,12,0,1,0,17,0A12,12,0,0,0,83.51,155.51Zm9-39a12,12,0,1,0-17,0A12,12,0,0,0,92.49,116.49Zm48-1a12,12,0,1,0,0,17A12,12,0,0,0,140.49,115.51ZM232,128A104,104,0,1,1,128,24a8,8,0,0,1,8,8,40,40,0,0,0,40,40,8,8,0,0,1,8,8,40,40,0,0,0,40,40A8,8,0,0,1,232,128Zm-16.31,7.39A56.13,56.13,0,0,1,168.5,87.5a56.13,56.13,0,0,1-47.89-47.19,88,88,0,1,0,95.08,95.08Z"
      />
    </svg>
    <p
      class="css-80t0jy"
    >
      Item
    </p>
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<DropdownItem /> renders correctly without icon: WithoutIcon 1`] = `
<DocumentFragment>
  <button
    class="chakra-menu__menuitem css-jtq5p1"
    data-index="0"
    data-testid="dropdown-item"
    id="menu-list-:r4:-menuitem-:r5:"
    role="menuitem"
    tabindex="-1"
    type="button"
  >
    <p
      class="css-1a1j0go"
    >
      Item
    </p>
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
